--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="center jumbotron">
-  <h1>Salut Moussaillon!</h1>
+  <h1>Bienvenue!</h1>
   <h3>
-    Voici un petite liste des autres moussailons !
+    Liste des membres!
   </h3>
-  <%= link_to "c'est par ici Jeune moussaillon", 'corsairs', class: "btn btn-lg btn-primary" %>
+  <%= link_to "Clique ici', class: "btn btn-lg btn-primary" %>
 </div>
